--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -800,7 +800,7 @@ div.section, div.selectedSection, .modal-content {
 	border-radius: 5px 5px 5px 5px;
 	box-shadow: inset 0 0 2px white, 0 0 3px rgba(0, 0, 0, 0.5);
 	border-radius: 0.5em 0.5em 0.5em 0.5em;
-	padding: 12px 12px 20px 16px;
+	padding: 20px 20px 32px 20px;
 	box-sizing:border-box;
 }
 
@@ -1079,7 +1079,7 @@ div.future {
     position: relative;
     z-index: 11;
     margin: 10% auto; /* 15% from the top and centered */
-    max-width: 95%;
+    max-width: 98%;
     width: 100%;
     display: block;
     overflow-x: visible;
@@ -1393,31 +1393,39 @@ button:disabled {
      height: min-content;
  }
 
-#baseSpecializationModal .specialization.available, #baseSpecializationModal .specialization.active {
-    cursor: pointer;
-}
-
-#baseSpecializationModal .specialization.active {
-    box-shadow: var(--table-header-selected-shadow);
-    background: var(--table-header-selected-background);
-    color: var(--table-header-selected-color);
-    text-shadow: var(--table-header-selected-text-shadow);
-}
-#baseSpecializationModal .specialization.available:hover {
-    box-shadow: 0px 0px 7px 10px rgb(48 205 255 / 20%);
-}
-#baseSpecializationModal .specialization.unavailable, #baseSpecializationModal .specialization.unavailable .dot {
-    cursor: not-allowed !important;
-}
-
-.grid-specialization {
+.modal-grid-options {
     display: grid;
     grid-gap: 1.25rem;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     width: 100%;
     margin: 10px 0 20px;
 }
+.modal-grid-options-320 {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
 
+.modal-grid-options .option {
+    border-radius: 8px;
+    padding: 16px 12px 20px 12px;
+    box-sizing: border-box;
+}
+
+.modal-grid-options .option.available, .modal-grid-options .option.active {
+    cursor: pointer;
+}
+
+.modal-grid-options .option.active {
+    box-shadow: var(--table-header-selected-shadow);
+    background: var(--table-header-selected-background);
+    color: var(--table-header-selected-color);
+    text-shadow: var(--table-header-selected-text-shadow);
+}
+.modal-grid-options .option.available:hover {
+    box-shadow: 0px 0px 7px 10px rgb(48 205 255 / 20%);
+}
+.modal-grid-options .option.unavailable, .modal-grid-options .option.unavailable .dot {
+    cursor: not-allowed !important;
+}
 
 .mobileOnly {
     visibility: hidden;
