--- a/airline-web/public/css-templates/treviso/css/style.css
+++ b/airline-web/public/css-templates/treviso/css/style.css
@@ -118,7 +118,7 @@ h3 {
 
 h4 {
 	font-family: "Inter", Verdana, Arial, sans-serif;
-	line-height: 1.6em;
+	line-height: 1.05;
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 16px;
@@ -140,6 +140,10 @@ h6 {
 	/*color: #454544;*/
 	text-decoration: none;
 	font-size: 12px;
+}
+hr {
+    border: #555 0.5px solid;
+    margin: 20px 0;
 }
 .hidden {
 	display: none;
